--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: 'Do Hyeon', sans-serif;
+  /* font-family: 'Noto Sans KR', sans-serif; */
   min-height: 100vh;
   margin: 0px;
 }
@@ -95,4 +96,96 @@ header .head_btn_right {
 
 header button {
   font-family: 'Do Hyeon';
+}
+
+/* DiaryList */
+
+.DiaryList .menu_wrapper {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.DiaryList .menu_wrapper .right_col {
+  flex-grow: 1;
+}
+
+.DiaryList .menu_wrapper .right_col button {
+  width: 100%;
+}
+
+.DiaryList .ControlMenu {
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #e2e2e2;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  cursor: pointer;
+  font-family: "Do Hyeon";
+  font-size: 18px;
+}
+
+.DiaryItem {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #e2e2e2;
+  display: flex;
+  justify-content: space-between;
+}
+
+.DiaryItem .emotion_img_wrapper {
+  cursor: pointer;
+  min-width: 120px;
+  height: 80px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.DiaryItem .emotion_img_wrapper_1 {
+  background: #64c964;
+}
+
+.DiaryItem .emotion_img_wrapper_2 {
+  background: #9dd772;
+}
+
+.DiaryItem .emotion_img_wrapper_3 {
+  background: #fdce17;
+}
+
+.DiaryItem .emotion_img_wrapper_4 {
+  background: #fd8446;
+}
+
+.DiaryItem .emotion_img_wrapper_5 {
+  background: #fd565f;
+}
+
+.DiaryItem .info_wrapper {
+  flex-grow: 1;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+.DiaryItem .diary_date {
+  font-weight: bold;
+  font-size: 25px;
+  margin-bottom: 5px;
+  font-family: "Noto Sans KR"
+}
+
+.DiaryItem .diary_content_preview {
+  font-size: 18px;
+  font-family: "Noto Sans KR"
+}
+
+.DiaryItem .btn_wrapper {
+  min-width: 70px;
 }
